fix: [PIE-2742]: Corrected the overflow (#7445)
* fix: [PIE-2742]: Corrected the overflow

* fix: [PIE-2742]: Code fix and snapshot updated

* fix: [PIE-2742]: snapshot updated

--- a/src/modules/70-pipeline/components/InputSetSelector/InputSetSelector.module.scss
+++ b/src/modules/70-pipeline/components/InputSetSelector/InputSetSelector.module.scss
@@ -150,6 +150,9 @@
   padding-left: var(--spacing-large) !important;
   font-size: var(--font-size-small) !important;
   color: var(--black) !important;
+  :global(.bp3-control-indicator) {
+    flex-shrink: 0;
+  }
 }
 
 .inputSetGitDetails {
